# train-sim-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/models/: station.glb  tgv_bogie.glb  tgv_gabarit.glb  tgv_procedural.glb  tgv_voiture.glb  train.glb  tree.glb
cmake/: CompilerWarnings.cmake  Dependencies.cmake  EmbedSpirv.cmake  Rust.cmake  Shaders.cmake
crates/noire_procgen/: Cargo.toml  build.rs  cbindgen.toml
crates/noire_procgen/src/: lib.rs
docs/: architecture.md
engine/: CMakeLists.txt
engine/app/: CMakeLists.txt
engine/app/include/noire/app/: application.hpp
engine/app/src/: application.cpp
engine/audio/: CMakeLists.txt
engine/audio/include/noire/audio/: audio_engine.hpp  audio_loader.hpp  rail_audio.hpp
engine/audio/src/: audio_engine.cpp  audio_loader.cpp  miniaudio_impl.cpp  rail_audio.cpp
engine/core/: CMakeLists.txt
engine/core/include/noire/core/: camera.hpp  engine.hpp  job_system.hpp  log.hpp  math.hpp  procedural_track.hpp  speed_limits.hpp  spline.hpp  terrain.hpp  track_source.hpp  version.hpp.in
engine/core/src/: camera.cpp  engine.cpp  job_system.cpp  log.cpp  procedural_track.cpp  speed_limits.cpp  spline.cpp  terrain.cpp
engine/physics/: CMakeLists.txt
engine/physics/include/noire/physics/: air_brake.hpp  bogie.hpp  car_body.hpp  consist.hpp  wagon.hpp
engine/physics/src/: air_brake.cpp  bogie.cpp  car_body.cpp  consist.cpp  wagon.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/noire/platform/: window.hpp
engine/platform/src/: window.cpp
engine/render/: CMakeLists.txt
engine/render/include/noire/render/: gpu_buffer.hpp  renderer.hpp  swapchain.hpp  transfer_manager.hpp  vertex.hpp  vulkan_context.hpp
engine/render/shaders/: foliage.frag  hud.frag  hud.vert  mesh.frag  mesh.vert  mesh_instanced.vert  mesh_textured.frag  mesh_textured.vert  prefilter_env.comp  rain.frag  rain.vert  shadow.vert  shadow_foliage.frag  shadow_instanced.vert  skybox.frag  skybox.vert  terrain.frag  triangle.vert  wire.frag  wire.vert
engine/render/shaders/common/: foliage.glsl  global_ubo.glsl  pbr.glsl  stochastic.glsl
engine/render/src/: hud_font.hpp  renderer.cpp  swapchain.cpp  transfer_manager.cpp  vma_impl.cpp  vulkan_context.cpp
engine/resource/: CMakeLists.txt
engine/resource/include/noire/resource/: asset_paths.hpp  asset_types.hpp  gltf_loader.hpp  hdr_loader.hpp  image_loader.hpp  resource_manager.hpp
engine/resource/src/: asset_paths.cpp  cgltf_impl.cpp  gltf_loader.cpp  hdr_loader.cpp  image_loader.cpp  resource_manager.cpp  stb_image_impl.cpp
engine/scene/: CMakeLists.txt
engine/scene/include/noire/scene/: catenary.hpp  terrain_clipmap.hpp  track_mesh.hpp  world_streamer.hpp
engine/scene/src/: catenary.cpp  terrain_clipmap.cpp  track_mesh.cpp  track_mesh_rust.cpp  world_streamer.cpp
engine/scene/test/: procgen_ab.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
tools/: gen_station.py  gen_tgv_gabarit.py  gen_tgv_procedural.py  gen_tgv_voiture.py  gen_train.py  gen_tree.py
